RESOLVED FIXED 54041
REGRESSION (r76301): 'plaintext-only' must be a supported contentEditable mode.
https://bugs.webkit.org/show_bug.cgi?id=54041
Summary REGRESSION (r76301): 'plaintext-only' must be a supported contentEditable mode.
Andy Estes
Reported 2011-02-08 15:30:12 PST
REGRESSION (r76301): 'plaintext-only' must be a supported contentEditable mode.
Attachments
Patch (4.22 KB, patch)
2011-02-08 15:42 PST, Andy Estes
darin: review+
Andy Estes
Comment 1 2011-02-08 15:37:57 PST
Andy Estes
Comment 2 2011-02-08 15:38:53 PST
Despite not being in the spec, pre-existing WebKit clients rely on setContentEditable:'plaintext-only'. Patch forthcoming.
Andy Estes
Comment 3 2011-02-08 15:42:15 PST
Andy Estes
Comment 4 2011-02-08 15:55:59 PST
Oops, I forgot expected results. I'll include those when I land.
Andy Estes
Comment 5 2011-02-08 15:59:49 PST
Note You need to log in before you can comment on or make changes to this bug.