2011-02-08  Andy Estes  <aestes@apple.com>

Reviewed by Darin Adler.

        REGRESSION (r76301): 'plaintext-only' must be a supported contentEditable mode.
        https://bugs.webkit.org/show_bug.cgi?id=54041

        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::setContentEditable): Setting the contentEditable
        attribute to 'plaintext-only' should not throw an exception.
2011-02-08  Andy Estes  <aestes@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (r76301): 'plaintext-only' must be a supported contentEditable mode.
        https://bugs.webkit.org/show_bug.cgi?id=54041

        * fast/dom/HTMLElement/set-value-caseinsensitive-expected.txt:
        * fast/dom/HTMLElement/set-value-caseinsensitive.html:


Canonical link: https://commits.webkit.org/68044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77985 268f45cc-cd09-0410-ab3c-d52691b4dbfc